# emmett

./: .gitignore  Cargo.toml  README.md  configuration.yaml  dev.sh  out.txt  publish.sh
.github/workflows/: rust.yml
content/en/: 2018-02-01-simple-disk-encryption-tutorial-with-archlinux.md  2018-03-19-from-python-to-go-to-rust.md  2021-01-11-why-you-should-give-crystal-lang-a-try.md  2021-02-05-manage-multiple-crystal-versions.md  2021-05-21-lucky-fileupload-custom-filename-shrine.md  2021-06-02-crystal-lang-syntax-highlighting-with-noir-and-lucky.md  2021-09-21-parcel-tailwind-css-elm-lang-elm-spa.md  2024-06-05-running-prettier-with-pre-commit.md  2024-10-08-packaging-tauriv2-flatpak-snapcraft.md  adding-tailwindcss-to-lucky-crystal-lang.en.md  archlinux-retina-hidpi-macbookpro-xmonad.en.md  dropbox-scala-play-framework-example.en.md  elm-europe-2017-what-can-we-do-better.en.md  elm-in-production.en.md  how-to-make-your-website-energy-efficient.en.md  how-to-pass-paramaters-to-a-crossbarioautobahn-python-component.en.md  howto-fix-archlinux-boot-after-macosx-upgrade.en.md  installing-atlas-for-kaldi-by-disabling-cpu-throttling-on-archlinux.en.md  interacting-with-dom-element-using-elm-audio-video.en.md  php-love-it-or-leave-it.en.md  setting-up-a-low-tech-server.en.md  trust_the_htype.en.md
content/fr/: 2012-09-22-comment-réussir-dans-la-vie-dompter-léchec.md  2012-09-27-comment-parler-en-public-donner-un-cours-ou-une-conférence.md  2012-10-01-comment-choisir-sa-vie-suivre-son-instinct.md  2012-10-09-jai-pas-le-temps-la-pire-excuse-qui-soit.md  2012-10-10-le-développement-personnel-pour-qui-pourquoi.md  2012-10-12-comment-pleinement-profiter-de-ses-enfants.md  2012-10-17-comment-doubler-sa-vitesse-de-frappe-au-clavier.md  2012-10-19-travailler-moins-pour-gagner-plus-la-semaine-de-4-heures.md  2012-10-25-le-pouvoir-du-moment-présent.md  2012-11-05-recrutement-développeur-web-comment-sortir-du-lot-cv-lettre-de-motivation.md  2012-11-24-positivez-autorisez-vous-à-réussir.md  2012-11-27-casser-la-routine-avec-des-enfants-la-soirée-bougies.md  2012-12-20-jai-pourtant-tout-ce-quil-faut-pour-être-heureux.md  2013-01-02-on-manque-enfin-de-travail-vive-le-revenu-de-base.md  2013-01-07-pour-un-web-indépendant.md  2013-03-12-amusez-vous.md  (+98 more)
pages/: about.md  index.md  research.md
src/: configuration.rs  content.rs  errors.rs  lib.rs  main.rs  markdown.rs  post.rs  rss.rs  site.rs  sitemap.rs  slugify.rs  startup.rs
static/: custom.css  robots.txt
templates/: base.html
(+111 files in other folders)
