[package]
name = "emmett"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "emmett"

[dependencies]
env_logger = "0.11"
log = "0.4"
walkdir = "2"
gray_matter = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.219"
pulldown-cmark = "0.11"
tera = "1"
lazy_static = "1.5.0"
# Use git version to get the nice Builder pattern
config = "0.15.11"
chrono = "0.4"
# See https://github.com/trishume/syntect/issues/583
syntect = { version = "5", default-features = false, features = ["default-fancy"]}
atom_syndication = "0.12"
form_urlencoded = "1.2.1"
anyhow = "1.0.98"
thiserror = "1.0.69"
fs_extra = "1.3.0"
xml = "0.8.20"
slug = "0.1.6"
clap = { version = "4.5.37", features = ["derive"] }
strip_markdown = "0.2.0"
pulldown-cmark-toc = "0.5.0"
regex = "1.11.1"
once_cell = "1.21.3"
